dataset1235/2025-2/805158916/users/1354266131/executions/2651470117_2667036473.log
== RUN (2025-08-25 14:28:57)
-- CODE: 
tempc = int(input())
k=tempc+273.15
print(round(tempc,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.25'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-10.0'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-40.0'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '30.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:29:16)
-- CODE: 
tempc = int(input())
k=tempc+273.15
print(round(k,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.25'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-10.0'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-40.0'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '30.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:35:20)
-- CODE: 
tempc = float(input("temp em celcius: "))
k = tempc+273.15
print(round(k,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
temp em celcius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
temp em celcius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
temp em celcius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
temp em celcius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
temp em celcius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
temp em celcius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:30:19)
-- CODE: 
tempc = int(input())
k=tempc+273.15
print((round(k,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    print((round(k,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    print((round(k,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    print((round(k,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    print((round(k,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    print((round(k,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    print((round(k,2))
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:34:00)
-- CODE: 
tempc = float(input())
k=tempc+273.15
print(round(k,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:30:10)
-- CODE: 
tempc = int(input())
k=tempc+273.15
print(k(round(k,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    print(k(round(k,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    print(k(round(k,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    print(k(round(k,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    print(k(round(k,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    print(k(round(k,2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    print(k(round(k,2))
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:31:34)
-- CODE: 
tempc = float(input())
k=tempc+273.15
print(round(k,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:35:52)
-- CODE: 
tempc = float(input("temp em celcius: "))
k = tempc+273.15
print(round(k,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
temp em celcius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
temp em celcius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
temp em celcius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
temp em celcius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
temp em celcius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
temp em celcius: 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:35:41)
-- CODE: 
tempc = float(input("temp em celcius: "))
k = tempc+273.15
print(round(k,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
temp em celcius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
temp em celcius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
temp em celcius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
temp em celcius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
temp em celcius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
temp em celcius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:31:03)
-- CODE: 
tempc = int(input())
k=tempc+273.15
print(round(k,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.25'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-10.0'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-40.0'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempc = int(input())
            ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '30.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
